Excel-CSV and Excel-Oracle updates

--- a/Excel-CSV.ipynb
+++ b/Excel-CSV.ipynb
@@ -13,7 +13,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 75,
+            "execution_count": 1,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd"
@@ -30,10 +30,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 76,
+            "execution_count": 2,
             "source": [
                 "# Create DataFrame from CSV\n",
-                "df_csv = pd.read_csv(\"testtable.csv\")\n",
+                "df_csv = pd.read_csv(\"testtable_source.csv\")\n",
                 "# View your new DataFrame\n",
                 "df_csv"
             ],
@@ -42,15 +42,17 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "         TEST_DATETIME  TEST_NUMBER                             TEST_TEXT\n",
-                            "0  2021-08-18 13:24:39       128355                          Test from R!\n",
-                            "1  2021-08-18 13:40:42       128355                    Test from R again!\n",
-                            "2  2021-08-18 13:46:47       209998               Test from R once again!\n",
-                            "3  2021-08-18 13:55:06       498198       R test from the actual program!\n",
-                            "4  2021-08-20 15:12:05       573466                     Test from Python!\n",
-                            "5  2021-08-20 15:12:05       678345               Test from Python again!\n",
-                            "6  2021-08-20 15:37:45       456234          Test from Python once again!\n",
-                            "7  2021-08-20 16:31:54       654321  Python test from the actual program!"
+                            "         TEST_DATETIME  TEST_NUMBER                       TEST_TEXT  \\\n",
+                            "0  2021/08/25 19:10:28       902246  Record added August 25 of 2021   \n",
+                            "1  2021/08/25 19:10:28       849084  Record added August 25 of 2021   \n",
+                            "2  2021/08/25 19:10:28       390490  Record added August 25 of 2021   \n",
+                            "3  2021/08/25 19:10:28       563009  Record added August 25 of 2021   \n",
+                            "\n",
+                            "          RECORD_ADDED  \n",
+                            "0  2021/08/25 19:10:28  \n",
+                            "1  2021/08/25 19:10:28  \n",
+                            "2  2021/08/25 19:10:28  \n",
+                            "3  2021/08/25 19:10:28  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -74,56 +76,37 @@
                             "      <th>TEST_DATETIME</th>\n",
                             "      <th>TEST_NUMBER</th>\n",
                             "      <th>TEST_TEXT</th>\n",
+                            "      <th>RECORD_ADDED</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>2021-08-18 13:24:39</td>\n",
-                            "      <td>128355</td>\n",
-                            "      <td>Test from R!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>902246</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>2021-08-18 13:40:42</td>\n",
-                            "      <td>128355</td>\n",
-                            "      <td>Test from R again!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>849084</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>2021-08-18 13:46:47</td>\n",
-                            "      <td>209998</td>\n",
-                            "      <td>Test from R once again!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>390490</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>2021-08-18 13:55:06</td>\n",
-                            "      <td>498198</td>\n",
-                            "      <td>R test from the actual program!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>4</th>\n",
-                            "      <td>2021-08-20 15:12:05</td>\n",
-                            "      <td>573466</td>\n",
-                            "      <td>Test from Python!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>5</th>\n",
-                            "      <td>2021-08-20 15:12:05</td>\n",
-                            "      <td>678345</td>\n",
-                            "      <td>Test from Python again!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>6</th>\n",
-                            "      <td>2021-08-20 15:37:45</td>\n",
-                            "      <td>456234</td>\n",
-                            "      <td>Test from Python once again!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>7</th>\n",
-                            "      <td>2021-08-20 16:31:54</td>\n",
-                            "      <td>654321</td>\n",
-                            "      <td>Python test from the actual program!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>563009</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -131,7 +114,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 76
+                    "execution_count": 2
                 }
             ],
             "metadata": {}
@@ -145,10 +128,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 90,
+            "execution_count": 3,
             "source": [
                 "# Create DataFrame from Excel\n",
-                "df_excel = pd.read_excel(\"testtable.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
+                "df_excel = pd.read_excel(\"testtable_source.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
                 "# View your new DataFrame\n",
                 "df_excel"
             ],
@@ -157,15 +140,17 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "         TEST_DATETIME  TEST_NUMBER                             TEST_TEXT\n",
-                            "0  2021-08-18 13:24:39       128355                          Test from R!\n",
-                            "1  2021-08-18 13:40:42       128355                    Test from R again!\n",
-                            "2  2021-08-18 13:46:47       209998               Test from R once again!\n",
-                            "3  2021-08-18 13:55:06       498198       R test from the actual program!\n",
-                            "4  2021-08-20 15:12:05       573466                     Test from Python!\n",
-                            "5  2021-08-20 15:12:05       678345               Test from Python again!\n",
-                            "6  2021-08-20 15:37:45       456234          Test from Python once again!\n",
-                            "7  2021-08-20 16:31:54       654321  Python test from the actual program!"
+                            "         TEST_DATETIME  TEST_NUMBER                       TEST_TEXT  \\\n",
+                            "0  2021/08/25 19:10:28       902246  Record added August 25 of 2021   \n",
+                            "1  2021/08/25 19:10:28       849084  Record added August 25 of 2021   \n",
+                            "2  2021/08/25 19:10:28       390490  Record added August 25 of 2021   \n",
+                            "3  2021/08/25 19:10:28       563009  Record added August 25 of 2021   \n",
+                            "\n",
+                            "          RECORD_ADDED  \n",
+                            "0  2021/08/25 19:10:28  \n",
+                            "1  2021/08/25 19:10:28  \n",
+                            "2  2021/08/25 19:10:28  \n",
+                            "3  2021/08/25 19:10:28  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -189,56 +174,37 @@
                             "      <th>TEST_DATETIME</th>\n",
                             "      <th>TEST_NUMBER</th>\n",
                             "      <th>TEST_TEXT</th>\n",
+                            "      <th>RECORD_ADDED</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>2021-08-18 13:24:39</td>\n",
-                            "      <td>128355</td>\n",
-                            "      <td>Test from R!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>902246</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>2021-08-18 13:40:42</td>\n",
-                            "      <td>128355</td>\n",
-                            "      <td>Test from R again!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>849084</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>2021-08-18 13:46:47</td>\n",
-                            "      <td>209998</td>\n",
-                            "      <td>Test from R once again!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>390490</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>2021-08-18 13:55:06</td>\n",
-                            "      <td>498198</td>\n",
-                            "      <td>R test from the actual program!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>4</th>\n",
-                            "      <td>2021-08-20 15:12:05</td>\n",
-                            "      <td>573466</td>\n",
-                            "      <td>Test from Python!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>5</th>\n",
-                            "      <td>2021-08-20 15:12:05</td>\n",
-                            "      <td>678345</td>\n",
-                            "      <td>Test from Python again!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>6</th>\n",
-                            "      <td>2021-08-20 15:37:45</td>\n",
-                            "      <td>456234</td>\n",
-                            "      <td>Test from Python once again!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>7</th>\n",
-                            "      <td>2021-08-20 16:31:54</td>\n",
-                            "      <td>654321</td>\n",
-                            "      <td>Python test from the actual program!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>563009</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -246,7 +212,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 90
+                    "execution_count": 3
                 }
             ],
             "metadata": {}
@@ -260,21 +226,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 78,
+            "execution_count": 4,
             "source": [
                 "# List DataFrame columns\n",
-                "df_csv.columns"
+                "df_csv.columns\n",
+                "# List field types\n",
+                "df_csv.convert_dtypes().dtypes"
             ],
             "outputs": [
                 {
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "Index(['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT'], dtype='object')"
+                            "TEST_DATETIME    string\n",
+                            "TEST_NUMBER       Int64\n",
+                            "TEST_TEXT        string\n",
+                            "RECORD_ADDED     string\n",
+                            "dtype: object"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 78
+                    "execution_count": 4
                 }
             ],
             "metadata": {}
@@ -288,21 +260,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 79,
+            "execution_count": 5,
             "source": [
                 "# List DataFrame columns\n",
-                "df_excel.columns"
+                "df_excel.columns\n",
+                "# List field types\n",
+                "df_excel.convert_dtypes().dtypes"
             ],
             "outputs": [
                 {
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "Index(['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT'], dtype='object')"
+                            "TEST_DATETIME    string\n",
+                            "TEST_NUMBER       Int64\n",
+                            "TEST_TEXT        string\n",
+                            "RECORD_ADDED     string\n",
+                            "dtype: object"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 79
+                    "execution_count": 5
                 }
             ],
             "metadata": {}
@@ -316,7 +294,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 80,
+            "execution_count": 6,
             "source": [
                 "# Send CSV DataFrame to Excel file\n",
                 "df_csv.to_excel('testtable_csv_export.xlsx', index=False)"
@@ -333,7 +311,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 81,
+            "execution_count": 7,
             "source": [
                 "# Send Excel DataFrame to CSV file\n",
                 "df_excel.to_csv('testtable_excel_export.csv', index=False)"
@@ -350,10 +328,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 86,
+            "execution_count": 8,
             "source": [
                 "# Filter the CSV data\n",
-                "date_query = df_csv['TEST_DATETIME'].str.contains(\"2021-08-18\")\n",
+                "date_query = df_csv['TEST_DATETIME'].str.contains(\"2021/08/25\")\n",
                 "df_filtered_csv = df_csv.query('@date_query')\n",
                 "# Send part part of the CSV filtered DataFrame to Excel file\n",
                 "df_filtered_csv.to_excel('testtable_transformed_csv_export.xlsx', index=False, columns=['TEST_DATETIME', 'TEST_NUMBER'])"
@@ -370,10 +348,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 91,
+            "execution_count": 9,
             "source": [
                 "# Filter the Excel data\n",
-                "date_query = df_excel['TEST_DATETIME'].str.contains(\"2021-08-18\")\n",
+                "date_query = df_excel['TEST_DATETIME'].str.contains(\"2021/08/25\")\n",
                 "df_filtered_excel = df_excel.query('@date_query')\n",
                 "# Send part part of the Excel filtered DataFrame to CSV file\n",
                 "df_filtered_excel.to_csv('testtable_transformed_excel_export.csv', index=False, columns=['TEST_DATETIME', 'TEST_NUMBER'])"
@@ -386,7 +364,7 @@
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.8.0",
+            "version": "3.8.2",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -398,10 +376,10 @@
         },
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3.8.0 64-bit"
+            "display_name": "Python 3.8.2 64-bit"
         },
         "interpreter": {
-            "hash": "082e9a3bcad0a290d0001e938aa60b99250c6c2ef33a923c00b70f9826caf4b7"
+            "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
         }
     },
     "nbformat": 4,
