--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -15,10 +15,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 8,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
+                "# Used to get the current date/time\n",
+                "from datetime import datetime\n",
                 "# Library to talk with Oracle, requires Python cx_Oracle module and the Oracle Instant Client to be installed on host\n",
                 "from sqlalchemy import create_engine\n",
                 "# Field mapping uses SQLAlchemy\n",
@@ -36,10 +38,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 2,
             "source": [
                 "# Create DataFrame from Excel\n",
-                "df_excel = pd.read_excel(\"testtable.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
+                "df_excel = pd.read_excel(\"testtable_source.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
                 "# View your new DataFrame\n",
                 "df_excel"
             ],
@@ -48,15 +50,17 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "         TEST_DATETIME  TEST_NUMBER                             TEST_TEXT\n",
-                            "0  2021-08-18 13:24:39       128355                          Test from R!\n",
-                            "1  2021-08-18 13:40:42       128355                    Test from R again!\n",
-                            "2  2021-08-18 13:46:47       209998               Test from R once again!\n",
-                            "3  2021-08-18 13:55:06       498198       R test from the actual program!\n",
-                            "4  2021-08-20 15:12:05       573466                     Test from Python!\n",
-                            "5  2021-08-20 15:12:05       678345               Test from Python again!\n",
-                            "6  2021-08-20 15:37:45       456234          Test from Python once again!\n",
-                            "7  2021-08-20 16:31:54       654321  Python test from the actual program!"
+                            "         TEST_DATETIME  TEST_NUMBER                       TEST_TEXT  \\\n",
+                            "0  2021/08/25 19:10:28       902246  Record added August 25 of 2021   \n",
+                            "1  2021/08/25 19:10:28       849084  Record added August 25 of 2021   \n",
+                            "2  2021/08/25 19:10:28       390490  Record added August 25 of 2021   \n",
+                            "3  2021/08/25 19:10:28       563009  Record added August 25 of 2021   \n",
+                            "\n",
+                            "          RECORD_ADDED  \n",
+                            "0  2021/08/25 19:10:28  \n",
+                            "1  2021/08/25 19:10:28  \n",
+                            "2  2021/08/25 19:10:28  \n",
+                            "3  2021/08/25 19:10:28  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -80,56 +84,37 @@
                             "      <th>TEST_DATETIME</th>\n",
                             "      <th>TEST_NUMBER</th>\n",
                             "      <th>TEST_TEXT</th>\n",
+                            "      <th>RECORD_ADDED</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>2021-08-18 13:24:39</td>\n",
-                            "      <td>128355</td>\n",
-                            "      <td>Test from R!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>902246</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>2021-08-18 13:40:42</td>\n",
-                            "      <td>128355</td>\n",
-                            "      <td>Test from R again!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>849084</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>2021-08-18 13:46:47</td>\n",
-                            "      <td>209998</td>\n",
-                            "      <td>Test from R once again!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>390490</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>2021-08-18 13:55:06</td>\n",
-                            "      <td>498198</td>\n",
-                            "      <td>R test from the actual program!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>4</th>\n",
-                            "      <td>2021-08-20 15:12:05</td>\n",
-                            "      <td>573466</td>\n",
-                            "      <td>Test from Python!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>5</th>\n",
-                            "      <td>2021-08-20 15:12:05</td>\n",
-                            "      <td>678345</td>\n",
-                            "      <td>Test from Python again!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>6</th>\n",
-                            "      <td>2021-08-20 15:37:45</td>\n",
-                            "      <td>456234</td>\n",
-                            "      <td>Test from Python once again!</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>7</th>\n",
-                            "      <td>2021-08-20 16:31:54</td>\n",
-                            "      <td>654321</td>\n",
-                            "      <td>Python test from the actual program!</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
+                            "      <td>563009</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 19:10:28</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -137,7 +122,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 3
+                    "execution_count": 2
                 }
             ],
             "metadata": {}
@@ -151,21 +136,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 3,
             "source": [
                 "# List DataFrame columns\n",
-                "df_excel.columns"
+                "df_excel.columns\n",
+                "# List field types\n",
+                "df_excel.convert_dtypes().dtypes"
             ],
             "outputs": [
                 {
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "Index(['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT'], dtype='object')"
+                            "TEST_DATETIME    string\n",
+                            "TEST_NUMBER       Int64\n",
+                            "TEST_TEXT        string\n",
+                            "RECORD_ADDED     string\n",
+                            "dtype: object"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 4
+                    "execution_count": 3
                 }
             ],
             "metadata": {}
@@ -179,12 +170,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "source": [
                 "# Rename fields to match database (if needed)\n",
                 "df_excel.rename(columns = {'TEST_DATETIME':'test_datetime', }, inplace = True)\n",
                 "df_excel.rename(columns = {'TEST_NUMBER':'test_number', }, inplace = True)\n",
-                "df_excel.rename(columns = {'TEST_TEXT':'test_text', }, inplace = True)"
+                "df_excel.rename(columns = {'TEST_TEXT':'test_text', }, inplace = True)\n",
+                "df_excel.rename(columns = {'RECORD_ADDED':'record_added', }, inplace = True)"
             ],
             "outputs": [],
             "metadata": {}
@@ -192,33 +184,36 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Convert Date/Time Field from String"
+                "# Update Record Added Fields"
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 16,
+            "source": [
+                "# Get the current date/time\n",
+                "now_is = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
+                "# Populate the updated date/time\n",
+                "df_excel['record_added'] = now_is"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Convert Date/Time Fields from String"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 18,
             "source": [
                 "# String to Date/Time\n",
-                "df_excel['test_datetime'] = pd.to_datetime(df_excel['test_datetime'])"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# Excel Field Types"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
-                "# List fields and their types\n",
-                "df_excel.convert_dtypes().dtypes"
+                "df_excel['test_datetime'] = pd.to_datetime(df_excel['test_datetime'])\n",
+                "df_excel['record_added'] = pd.to_datetime(df_excel['record_added'])"
             ],
             "outputs": [],
             "metadata": {}
@@ -289,7 +284,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Optional Way to Append Excel to Oracle if unable to map data types in DataFrame"
+                "# Optional way to Append Excel to Oracle if unable to map data types in DataFrame"
             ],
             "metadata": {}
         },
