Excel-Oracle updated

--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -41,7 +41,7 @@
             "execution_count": 2,
             "source": [
                 "# Create DataFrame from Excel\n",
-                "df_excel = pd.read_excel(\"testtable_source.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
+                "df_excel = pd.read_excel(\"testtable_source.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str, 'RECORD_ADDED':str})\n",
                 "# View your new DataFrame\n",
                 "df_excel"
             ],
@@ -130,40 +130,6 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Excel Columns"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "source": [
-                "# List DataFrame columns\n",
-                "df_excel.columns\n",
-                "# List field types\n",
-                "df_excel.convert_dtypes().dtypes"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "TEST_DATETIME    string\n",
-                            "TEST_NUMBER       Int64\n",
-                            "TEST_TEXT        string\n",
-                            "RECORD_ADDED     string\n",
-                            "dtype: object"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 3
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
                 "# Excel Columns Rename"
             ],
             "metadata": {}
@@ -216,6 +182,40 @@
                 "df_excel['record_added'] = pd.to_datetime(df_excel['record_added'])"
             ],
             "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Excel Columns"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "source": [
+                "# List DataFrame columns\n",
+                "df_excel.columns\n",
+                "# List field types\n",
+                "df_excel.convert_dtypes().dtypes"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "TEST_DATETIME    string\n",
+                            "TEST_NUMBER       Int64\n",
+                            "TEST_TEXT        string\n",
+                            "RECORD_ADDED     string\n",
+                            "dtype: object"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 3
+                }
+            ],
             "metadata": {}
         },
         {
@@ -293,7 +293,7 @@
             "execution_count": null,
             "source": [
                 "# Build dictory for data mapping\n",
-                "df_excel_oracle_mapfields = dict({'test_datetime': sqlalchemy.DateTime(), 'test_number': sqlalchemy.types.INTEGER(), 'test_text': sqlalchemy.types.VARCHAR(length=50)})\n",
+                "df_excel_oracle_mapfields = dict({'test_datetime': sqlalchemy.DateTime(), 'test_number': sqlalchemy.types.INTEGER(), 'test_text': sqlalchemy.types.VARCHAR(length=50), 'record_added': sqlalchemy.DateTime()})\n",
                 "# Append Excel DataFrame to Oracle table using data mapping\n",
                 "df_excel.to_sql(oracle_table, db_inst, if_exists='append', index=False, dtype=df_excel_oracle_mapfields)"
             ],
