Oracle-Excel update

--- a/Oracle-Excel.ipynb
+++ b/Oracle-Excel.ipynb
@@ -152,7 +152,7 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= \"2021-08-18\") & (df_oracle['test_datetime'] < \"2021-08-19\")\n",
+                "date_query = (df_oracle['test_datetime'] >= \"2021/08/25\") & (df_oracle['test_datetime'] < \"2021/08/26\")\n",
                 "df_filtered_oracle = df_oracle.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame to Excel file\n",
                 "df_filtered_oracle.to_excel('testtable_transformed_oracle_export.xlsx', index=False, columns=['test_datetime', 'test_number'])"
@@ -172,7 +172,7 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= \"2021-08-18\") & (df_oracle['test_datetime'] < \"2021-08-19\")\n",
+                "date_query = (df_oracle['test_datetime'] >= \"2021/08/25\") & (df_oracle['test_datetime'] < \"2021/08/26\")\n",
                 "df_filtered_oracle = df_oracle.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame to CSV file\n",
                 "df_filtered_oracle.to_csv('testtable_transformed_oracle_export.csv', index=False, columns=['test_datetime', 'test_number'])"
